--- a/palabras.html
+++ b/palabras.html
@@ -34,7 +34,9 @@
     </section>
     <section class="textoDos">
         <p>REGLAS DEL JUEGO: ordena las letras para formar la palabra solicitada. En el caso de ser incorrecto, vuelva a intentarlo. Advertencia: UTILICE MAYUSCULAS!</p>
-   </main> 
+   </main>
+   <script src="data/variablesPa.js"></script>
+   <script src="data/validacionPa.js"></script> 
    <script src="indexPalabras.js"></script>
 </body>
 </html>
