--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="css2/estilo.css">
     <link rel="shortcut icon" href="imagenes/start.png">
 </head>
-<body class="bodyIndex">
-    <main class="mainIndex">
-        <a  href="juegos.html"><img class="fotoStart" src="imagenes/start.png" alt="botonSart"></a>
+<body>
+    <main class="mainJuegos">
+    <h1 class="tituloJuegos">Elije un juego:</h1>
+    <a href="tateti.html"><img class="fotoTateti" src="imagenes/tateti.png" alt="fotoTateti"></a>
+    <a href="palabras.html"><img class="fotoPalabras" src="imagenes/ABC.png" alt="fotoPalabras"></a>
     </main>
     
 </body>
