--- a/palabras.html
+++ b/palabras.html
@@ -13,30 +13,33 @@
     <h1 class="tituloTa">Juego de palabras</h1>
        <section class="sectionUno">
            <h1 class="nivel">Nivel 1</h1>
-           <h2>UGAA</h2>
+           <h2 class="palabraUno"></h2>
            <div ><input type="text" id="inputUno"></div>
            <div><button class="botonPalabraUno">verificar</button></div>
            <div><h2 class="mensajePalabraUno"></h2></div>
        </section>
        <section class="sectionDos">
         <h1 class="nivel">Nivel 2</h1>
-        <h2>EBMLUE</h2>
+        <h2 class="palabraDos"></h2>
         <div><input type="text" id="inputDos"></div>
         <div><button class="botonPalabraDos">verificar</button></div>
         <div><h2 class="mensajePalabraDos"></h2></div>
     </section>
     <section class="sectionTres">
         <h1 class="nivel">Nivel 3</h1>
-        <h2>RARZTAE</h2>
+        <h2 class="palabraTres"></h2>
         <div><input type="text" id="inputTres"></div>
         <div><button class="botonPalabraTres">verificar</button></div>
         <div><h2 class="mensajePalabraTres"></h2></div>
     </section>
+    <section><div><button class="botonReset">RESET</button></div>
+    </section>
     <section class="textoDos">
-        <p>REGLAS DEL JUEGO: ordena las letras para formar la palabra solicitada. En el caso de ser incorrecto, vuelva a intentarlo. Advertencia: UTILICE MAYUSCULAS!</p>
+        <p>REGLAS DEL JUEGO: ordena las letras para formar la palabra solicitada. En el caso de ser incorrecto, vuelva a intentarlo. Solo tiene 2 intentos por nivel. Advertencia: UTILICE MAYUSCULAS!</p>
    </main>
-   <script src="data/variablesPa.js"></script>
-   <script src="data/validacionPa.js"></script> 
+   <script src="dataPa/desordenPa.js"></script>
+   <script src="dataPa/nivelesPa.js"></script>
+   <script src="dataPa/validacionPa.js"></script>
    <script src="indexPalabras.js"></script>
 </body>
 </html>
